feat: maded fixes

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -30,8 +30,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Claim faucets "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,10 +46,10 @@
      "output_type": "stream",
      "text": [
       "Claiming faucets : ===============>\n",
-      "WETH STARTING 1328620271631771072\n",
-      "WETH ENDING 2328620271631771072\n",
-      "USDC ENDING 4528489239\n",
-      "USDC ENDING 4628489239\n"
+      "WETH STARTING 0\n",
+      "WETH ENDING 1000000000000000000\n",
+      "USDC ENDING 0\n",
+      "USDC ENDING 100000000\n"
      ]
     }
    ],
@@ -113,23 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2000000000000000000"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "USDC BALANCE : 100000000\n",
+      "WETH BALANCE : 1000000000000000000\n"
+     ]
     }
    ],
    "source": [
-    "usdc.balanceOf(boa.env.eoa)\n",
-    "weth.balanceOf(boa.env.eoa)"
+    "print(\"USDC BALANCE :\", usdc.balanceOf(boa.env.eoa))\n",
+    "\n",
+    "print(\"WETH BALANCE :\", weth.balanceOf(boa.env.eoa))"
    ]
   },
   {
@@ -176,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Deposit into AAVE"
+    "# Get and Instance AAVE Pool Contract"
    ]
   },
   {
@@ -205,6 +211,7 @@
     "\n",
     "config.reload()\n",
     "active_network = config.get_active_network()\n",
+    "\n",
     "pool_contract = active_network.manifest_named(\"pool\", address = pool_address )"
    ]
   },
@@ -230,7 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deposit into AAVE Pool Contract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,13 +256,16 @@
       "Deposting USD Coin Money to AAVE Contract 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
       "Deposting Wrapped Ether Money to AAVE Contract 0x87870Bca3F3fD6335C3F4ce8392D69350B4fA4E2\n",
       "User account data:\n",
-      "    totalCollateralBase: 1343827942931\n",
+      "    totalCollateralBase: 337981974545\n",
       "    totalDebtBase: 0\n",
-      "    availableBorrowsBase: 1049664006223\n",
-      "    currentLiquidationThreshold: 8082\n",
-      "    ltv: 7811\n",
+      "    availableBorrowsBase: 271500920152\n",
+      "    currentLiquidationThreshold: 8285\n",
+      "    ltv: 8033\n",
       "    healthFactor: 115792089237316195423570985008687907853269984665640564039457584007913129639935\n",
-      "        \n"
+      "        \n",
+      "CHECKING USDC AND WETH BALANCES : ===========================\n",
+      "USDC BALANCE : 0\n",
+      "WETH BALANCE : 0\n"
      ]
     }
    ],
@@ -287,7 +306,12 @@
     "    currentLiquidationThreshold: {currentLiquidationThreshold}\n",
     "    ltv: {ltv}\n",
     "    healthFactor: {healthFactor}\n",
-    "        \"\"\")"
+    "        \"\"\")\n",
+    "\n",
+    "print(\"CHECKING USDC AND WETH BALANCES : ===========================\")\n",
+    "print(\"USDC BALANCE :\", usdc.balanceOf(boa.env.eoa))\n",
+    "\n",
+    "print(\"WETH BALANCE :\", weth.balanceOf(boa.env.eoa))"
    ]
   },
   {
@@ -299,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save Aave A-Tokens we eill be desipositing which are A_WETH and A_USDC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,15 +388,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the normalized balance of A_USDC (10**6) and A_WETH (10**18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5834.243715\n",
-      "2.328620271631771\n"
+      "100.0\n",
+      "1.0\n"
      ]
     }
    ],
@@ -382,20 +424,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get Price dunction"
+    "# Get Price from chainlink price feed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.00000731\n",
-      "3265.45\n"
+      "1.0000173\n",
+      "3279.81801545\n"
      ]
     }
    ],
@@ -420,8 +462,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chceck if portfolio postions in 70% WTH target and 30% USDC target"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -429,8 +478,8 @@
      "output_type": "stream",
      "text": [
       "True\n",
-      "0.43415426759109443\n",
-      "0.5658457324089056\n"
+      "0.029587888565544035\n",
+      "0.9704121114344559\n"
      ]
     }
    ],
@@ -459,18 +508,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Withrawing A_WETH from pool contract"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2328620271631771072 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2 A WETH\n",
+      "1000000000000000001 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2 A WETH\n",
       "USDC BALANCE :  {0}\n",
-      "WETH BALANCE :  {2328620271631771072}\n",
-      "aUSDC BALANCE :  {5834243715}\n",
+      "WETH BALANCE :  {1000000000000000001}\n",
+      "aUSDC BALANCE :  {100000000}\n",
       "aWETH BALANCE :  {0}\n"
      ]
     }
@@ -497,14 +553,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'usdc': {'contract': <usdc interface at 0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48>, 'trade': 909.6278396204973}, 'weth': {'contract': <weth interface at 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2>, 'trade': -0.2785632880613715}}\n"
+      "{'usdc': {'contract': <usdc interface at 0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48>, 'trade': 913.9283826739795}, 'weth': {'contract': <weth interface at 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2>, 'trade': -0.2786569832014307}}\n"
      ]
     }
    ],
@@ -571,19 +627,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "278563288061371488 AMount to sell\n",
+      "278656983201430688 AMount to sell\n",
       "SWAPPING : ======================>\n",
-      "818665055 MININUM OUT\n",
-      "USDC BALANCE :  {905641224}\n",
-      "WETH BALANCE :  {2050056983570399584}\n",
-      "aUSDC BALANCE :  {5834243715}\n",
+      "822535544 MININUM OUT\n",
+      "USDC BALANCE :  {913111368}\n",
+      "WETH BALANCE :  {721343016798569313}\n",
+      "aUSDC BALANCE :  {100000000}\n",
       "aWETH BALANCE :  {0}\n"
      ]
     }
